--- a/FinalProject/ClientApp/angular.json
+++ b/FinalProject/ClientApp/angular.json
@@ -129,5 +129,8 @@
       }
     }
   },
-  "defaultProject": "FinalProject"
+  "defaultProject": "FinalProject",
+  "cli": {
+    "analytics": false
+  }
 }
