--- a/FinalProject/ClientApp/package.json
+++ b/FinalProject/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.0.3",
     "@angular/platform-server": "^14.0.3",
     "@angular/router": "^14.0.3",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "oidc-client": "^1.11.5",
